--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "start dev": "nodemon ./src/index.js",
     "test": "jest"
   },
+  "engines":{
+    "node":"16.15.0",
+    "npm":"8.5.5"
+  },
   "devDependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
