--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "type": "module",
   "license": "AGPL-version-3.0",
   "private": false,
-  "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
-  },
   "homepage": "",
   "repository": {
     "type": "git",
@@ -32,7 +28,7 @@
     "node":"16.15.0",
     "npm":"8.5.5"
   },
-  "devDependencies": {
+  "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
